Dockerfile adjustments